- using rxjs Observable & Subject to communicate between components - fixed bug with loader, now it covers the whole modal window

--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.jqx-laoder {
+  z-index: 102 !important;
+}
+
+.jqx-loader-modal {
+  z-index: 101 !important;
+}
+
+.jqx-window {
+  z-index: 100 !important;
+}
+
+.jqx-window-modal {
+  z-index: 99 !important;
+}
